
Table Users {
  id uuid [pk, not null]

  username varchar[50] [not null, unique]
  name varchar[100] [not null]
  email varchar[255] [not null, unique]
  password varcha[255] [not null]

  created timestamp
  updated timestamp
}


Table Articles {
  id uuid [pk, not null]

  title varchar[255] [not null]
  content text [not null]
  banner_image varchar[255] [not null]

  user_id uuid [ref: > Users.id]

  created timestamp
  updated timestamp
}

Table Tags {
  id uuid [pk, not null]
  title varchar[255] [not null]
}

Table ArticlesTags {
  article_id uuid [ref: > Articles.id]
  tag_id uuid [ref: > Tags.id]
}

Table Comments {
  id uuid [pk, not null]
  title varchar[100] [not null]
  content text [not null]

  article_id uuid [ref: > Articles.id]
  user_id uuid [ref: > Users.id]
  
  created timestamp
  updated timestamp
}

